; ModuleID = '/home/carl/AnghaBench/linux/drivers/firmware/extr_ti_sci.c_ti_sci_cmd_set_irq.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/firmware/extr_ti_sci.c_ti_sci_cmd_set_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ti_sci_handle = type { i32 }

@MSG_FLAG_DST_ID_VALID = common dso_local global i32 0, align 4
@MSG_FLAG_DST_HOST_IRQ_VALID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ti_sci_handle*, i32, i32, i32, i32)* @ti_sci_cmd_set_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ti_sci_cmd_set_irq(%struct.ti_sci_handle* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.ti_sci_handle*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.ti_sci_handle* %0, %struct.ti_sci_handle** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = load i32, i32* @MSG_FLAG_DST_ID_VALID, align 4
  %13 = load i32, i32* @MSG_FLAG_DST_HOST_IRQ_VALID, align 4
  %14 = or i32 %12, %13
  store i32 %14, i32* %11, align 4
  %15 = load %struct.ti_sci_handle*, %struct.ti_sci_handle** %6, align 8
  %16 = load i32, i32* %11, align 4
  %17 = load i32, i32* %7, align 4
  %18 = load i32, i32* %8, align 4
  %19 = load i32, i32* %9, align 4
  %20 = load i32, i32* %10, align 4
  %21 = call i32 @ti_sci_set_irq(%struct.ti_sci_handle* %15, i32 %16, i32 %17, i32 %18, i32 %19, i32 %20, i32 0, i32 0, i32 0, i32 0, i32 0)
  ret i32 %21
}

declare dso_local i32 @ti_sci_set_irq(%struct.ti_sci_handle*, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
